@@ -1383,10 +1383,11 @@ When disabling a top-level virtual server, an option is now available to also di
 Added the Mail Client Configuration page, for setting up a Thunderbird-style client autoconfiguration URL for all virtual servers.
 Moved all background cron jobs (except existing backups) to Webmin's built-in scheduler, to save memory and reduce the CPU load of launching cron jobs.
 ---- Changes since 3.98 ----
-Updated the OpenCart script installer to version 1.5.5.1, Squirrelmail to 1.4.22, WordPress to 3.5.1, Movable Type to 5.2.3, PHP-Calendar to 1.1, Gallery to 3.0.4, Advanced Poll to 2.0.9, PHP-Wiki to 1.4.0rc1, Simple Invoices to 2011.1, phpScheduleIt to 2.3.6, Advanced Guestbook to 2.4.4, Zikula to 1.3.5, Roundcube to 0.8.5, phpMyAdmin to 3.5.7, Mantis to 1.12.14, SMF to 2.0.4, Trac to 1.0.1, SugarCRM to 6.5.10, Joomla to 3.0.3 and 2.5.9, ZenPhoto to 1.4.4.1b, Instiki to 0.19.6, TikiWiki to 10.1 and 6.10, Z-push to to 2.0.7, and Radiant to 1.1.2. Marked several scripts that no longer appear to be updated or available as unsupported.
+Updated the OpenCart script installer to version 1.5.5.1, Squirrelmail to 1.4.22, WordPress to 3.5.1, Movable Type to 5.2.3, PHP-Calendar to 1.1, Gallery to 3.0.4, Advanced Poll to 2.0.9, PHP-Wiki to 1.4.0rc1, Simple Invoices to 2011.1, phpScheduleIt to 2.3.6, Advanced Guestbook to 2.4.4, Zikula to 1.3.5, Roundcube to 0.8.5, phpMyAdmin to 3.5.7, Mantis to 1.12.14, SMF to 2.0.4, Trac to 1.0.1, SugarCRM to 6.5.10, Joomla to 3.0.3 and 2.5.9, ZenPhoto to 1.4.4.1b, Instiki to 0.19.6, TikiWiki to 10.1 and 6.10, Z-push to to 2.0.7, Django to 1.4.4, and Radiant to 1.1.2. Marked several scripts that no longer appear to be updated or available as unsupported.
 Added the ability to enable or disable server-side includes for a specific file extension for virtual servers with a website.
 If PHP 5.3 or higher is installed via a separate package, Virtualmin will now detect it and allow it to be selected on a per-domain or per-directory basis. This is useful for systems whose default PHP package is version 5.2 or older.
 Added a template section to configure the mail client auto-configuration XML, for example if some domains use custom mail servers.
 The key size is now configurable when setting up DKIM or generating a new key.
 Plugin modules available to domain owners can now be configured at the template level, in the Administrator's Webmin modules section.
 When the contact email address for a domain is changed, default mail aliases like postmaster will be updated to the new address.
+When DNS records are modified in a virtual server, all records are synchronized into any alias domains.
